downgrade list to compatible jdk8